--- a/aplikacja webowa - praca inzynierska/aplikacja webowa - praca inzynierska/aplikacja webowa - praca inzynierska/aplikacja webowa - praca inzynierska.csproj
+++ b/aplikacja webowa - praca inzynierska/aplikacja webowa - praca inzynierska/aplikacja webowa - praca inzynierska/aplikacja webowa - praca inzynierska.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Register.db" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="LiteDB" Version="5.0.12" />
   </ItemGroup>
 
