--- a/aplikacja webowa - praca inzynierska/frontend/package.json
+++ b/aplikacja webowa - praca inzynierska/frontend/package.json
@@ -12,6 +12,8 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
+    "bootstrap-vue-3": "^0.3.7",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
