--- a/aplikacja webowa - praca inzynierska/frontend/package.json
+++ b/aplikacja webowa - praca inzynierska/frontend/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "axios": "^0.27.2",
     "bootstrap-vue-3": "^0.3.7",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
