--- a/aplikacja webowa - praca inzynierska/frontend/package.json
+++ b/aplikacja webowa - praca inzynierska/frontend/package.json
@@ -12,6 +12,11 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/vue-fontawesome": "^3.0.1",
     "@popperjs/core": "^2.11.6",
     "axios": "^0.27.2",
     "bootstrap-vue-3": "^0.3.7",
