--- a/aplikacja webowa - praca inzynierska/frontend/package.json
+++ b/aplikacja webowa - praca inzynierska/frontend/package.json
@@ -21,7 +21,8 @@
     "axios": "^0.27.2",
     "bootstrap-vue-3": "^0.3.7",
     "vue": "^3.2.38",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vue3-simple-typeahead": "^1.0.11"
   },
   "devDependencies": {
     "@types/jsdom": "^20.0.0",
