--- a/aplikacja webowa - praca inzynierska/frontend/package.json
+++ b/aplikacja webowa - praca inzynierska/frontend/package.json
@@ -24,6 +24,7 @@
     "qrcode.vue": "^3.3.3",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5",
+    "vue3-print-nb": "^0.1.4",
     "vue3-simple-typeahead": "^1.0.11"
   },
   "devDependencies": {
