--- a/aplikacja webowa - praca inzynierska/frontend/package.json
+++ b/aplikacja webowa - praca inzynierska/frontend/package.json
@@ -6,8 +6,7 @@
     "build": "run-p type-check build-only",
     "preview": "vite preview --port 4173",
     "test:unit": "vitest --environment jsdom",
-    "test:e2e": "start-server-and-test preview http://localhost:4173/ 'cypress open --e2e'",
-    "test:e2e:ci": "start-server-and-test preview http://localhost:4173/ 'cypress run --e2e'",
+    "test:e2e": "run-p build & start-server-and-test preview http://localhost:4173/ 'cypress open --e2e'",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
   },
