--- a/aplikacja webowa - praca inzynierska/frontend/package.json
+++ b/aplikacja webowa - praca inzynierska/frontend/package.json
@@ -9,7 +9,8 @@
     "test:unit": "vitest --environment jsdom",
     "test:e2e": "run-p build & start-server-and-test preview http://localhost:4173/ 'cypress open --e2e'",
     "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
+    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
+    "e2e:open": "run-p build & npx cypress open --e2e"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
